@@ -13,6 +13,7 @@ import veusz.embed as veusz
 # construct a Veusz embedded window
 # many of these can be opened at any time
 g = veusz.Embedded('window title')
+g.EnableToolbar()
 
 # construct the plot
 g.To( g.Add('page') )
